[package]
name = "bdk-wasm"
version = "0.1.0"
authors = ["Dario Anongba Varela <dario.anongba@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = ["console"] }
anyhow = "1.0.93"
console_error_panic_hook = { version = "0.1.7", optional = true }
thiserror = "2.0.3"
serde_json = "1.0.133"

# Compatibility to compile to WASM
getrandom = { version = "0.2.15", features = ["js"] }
ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }

# Bitcoin dependencies
bdk_wallet = { git = "https://github.com/ValuedMammal/bdk", branch = "deps/esplora-client-103", features = [
    "keys-bip39",
] }
bdk_esplora = { git = "https://github.com/ValuedMammal/bdk", branch = "deps/esplora-client-103", features = [
    "async-https",
] }
serde-wasm-bindgen = "0.6.5"
bitcoin = { version = "0.32.4", features = ["serde"], default-features = false }
miniscript = "12.2.0"
bdk_bitcoind_rpc = "0.16.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
